# timesheet_gen

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  rustfmt.toml
src/: main.rs  timesheet_generator.rs  timesheet_info.rs
timesheet_gen/: Cargo.toml
timesheet_gen/src/: lib.rs  main.rs  timesheet_generator.rs
tsg_web_ui/: .gitignore  Cargo.toml  pyproject.toml
tsg_web_ui/src/: lib.rs  server.py
tsg_web_ui/src/templates/: index.html
