[package]
name = "timesheet_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poppler-rs = "0.21"
cairo-rs = { version = "0.17", features = ["png", "pdf"] } # might have to change this to 0.15
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strfmt = "0.2"
