[package]
name = "tsg_web_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsg_web_ui"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
timesheet_gen = { path = "../timesheet_gen", version = "0.1" }
serde_json = "1"
